# VoxInsert

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  VoiceAgentTyper_Updated_Build_Guide.md  VoxInsert_Updated_Build_Guide.md  config.example.json  vcpkg.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
distribution/package/: Install VoxInsert.bat  install.ps1  uninstall.ps1
documentation/: README.md  distribution-install-release-plan.md  latency-first-blocker-capture-first-results.md  latency-hard-standards-review.md
documentation/reference/: README.md  headset-media-button-research.md  mistral-transcription-api.md  openai-transcription-api.md  streaming-transcription-architecture.md  streaming-transcription-implementation-plan.md  transcript-post-processing.md
scripts/: bootstrap-toolchain.ps1  build-debug.ps1  build-release.ps1  generate-app-icon.ps1  package-release.ps1
src/: VoiceAgentTyper.manifest  VoiceAgentTyper.rc  VoxInsert.manifest  VoxInsert.rc  main.cpp  resource.h
src/archive/: archive_service.cpp  archive_service.h
src/audio/: audio_recorder.cpp  audio_recorder.h  wav_writer.cpp  wav_writer.h
src/config/: app_config.cpp  app_config.h
src/input/: hotkey_manager.cpp  hotkey_manager.h  smtc_controller.cpp  smtc_controller.h
src/insertion/: text_injector.cpp  text_injector.h
src/observability/: logging.cpp  logging.h
src/runtime/: app_host.cpp  app_host.h  app_host_internal.h  app_host_recording.cpp  app_host_runtime.cpp  app_host_settings.cpp  app_host_tray.cpp  bounded_queue.h  post_recording_workflow.cpp  post_recording_workflow.h  runtime_config_applier.cpp  runtime_config_applier.h  spsc_index_ring.h  startup_registration.cpp  startup_registration.h  streaming_recording_controller.cpp  streaming_recording_controller.h
src/security/: api_credential_store.cpp  api_credential_store.h  openai_credential_store.cpp  openai_credential_store.h
src/testing/: app_host_smoke_test.cpp  app_host_smoke_test.h
src/transcription/: fake_streaming_transcription_service.cpp  fake_streaming_transcription_service.h  mistral_realtime_streaming_service.cpp  mistral_realtime_streaming_service.h  mistral_transcription_service.cpp  mistral_transcription_service.h  openai_realtime_streaming_service.cpp  openai_realtime_streaming_service.h  openai_transcription_service.cpp  openai_transcription_service.h  streaming_transcription_service.h  transcript_assembler.cpp  transcript_assembler.h  transcription_client.cpp  transcription_client.h  transcription_service.h
src/ui/: settings_dialog.cpp  settings_dialog.h  status_pill.cpp  status_pill.h
tests/: streaming_transcription_tests.cpp
tests/fakes/: fake_streaming_transcription_service.cpp
